# numero-por-extenso

./: .travis-ci.yml  .travis.yml  Cargo.toml  README.md
src/: helpers.rs  lib.rs  main.rs  tipo.rs
src/conversor/: constantes.rs  mod.rs
