[package]
name = "numero-por-extenso"
version = "0.1.1"
authors = ["André Lins <andrelucas01@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Biblioteca Rust para conversão por extenso de valores numéricos."
keywords = ["numero", "extenso", "portugues"]
repository = "https://github.com/andrelmlins/numero-por-extenso"

[badges]
travis-ci = { repository = "andrelmlins/numero-por-extenso" }

[dependencies]
